--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-STRAVA_CLIENT_ID=
-STRAVA_CLIENT_SECRET=
-AUTH_REDIRECT_URI=
+STRAVA_CLIENT_ID="change_me"
+STRAVA_CLIENT_SECRET="please_change_me"
+AUTH_REDIRECT_URI="http://localhost:8085/exchange_token"
